# easylog

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
easylog/: core.py
