[metadata]
name = easylog    
version = 0.1.0           
author = Little Boy           
author_email = vikin025@126.com
description = 快速建立日志，3种模式可选  
long_description = file: README.md  
long_description_content_type = text/markdown
classifiers =              
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:              
python_requires = >=3.8
install_requires = arrow>=1.2.3,<2.0            